--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aos": "^2.3.4",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
+    "owl.carousel": "^2.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
